--- a/src/pages/styles/StudyGroups.css
+++ b/src/pages/styles/StudyGroups.css
@@ -4,14 +4,31 @@
 }
 
 .StudyGroups__Header {
+    display: flex;
+    position: fixed;
     flex-direction: column;
+    padding-top: 1.2rem;
+    padding-bottom: 1.2rem;
+    border-bottom: 2px solid var(--tertiary-color);
+    cursor: pointer;
+    height: 12vh;
+    background-color: var(--bg-color);
+    margin-top: 8vh;
+    width: 100%;
+    z-index: 25;
+    box-shadow: 0 20px 20px -20px rgba(0, 0, 0, 0.6);
+    padding: 0 1.5rem;
+}
+
+.StudyGroups__Header>h5 {
+    margin-top: .5rem;
+    margin-bottom: .75rem;
 }
 
 .StudyGroups__Body {
     flex: 1;
-    /* padding: 30px; */
     overflow: scroll;
-    margin-top: 18vh;
+    margin-top: 20vh;
     margin-bottom: 7rem;
 }
 
