--- a/src/pages/styles/Login.css
+++ b/src/pages/styles/Login.css
@@ -1,11 +1,15 @@
 .Login__container {
     padding: 1rem;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
 
 .Login__container>.Login__form>.Login__buttons>button {
     text-transform: inherit !important;
-    color: var(--primary-color);
-    background-color: var(--bg-color) !important;
+    color: var(--bg-color);
+    background-color: var(--primary-color);
     border: 1px solid var(--primary-color);
     width: 100%;
     border-radius: 15px;
@@ -25,8 +29,26 @@
     width: 100%;
 }
 
+.Login__buttons>p {
+    font-size: 14px;
+    font-style: italic;
+}
+
 #Login__btn {
     color: var(--bg-color);
     background-color: var(--primary-color) !important;
     /* border: 1px solid var(--primary-color); */
 }
+
+.Mate-Logo>img {
+    margin-top: 3rem;
+    width: 96px;
+}
+
+/* #Login-Google__btn {
+    height: 45px;
+    border-radius: 15px;
+    color: var(--bg-color);
+    background-color: var(--primary-color);
+
+} */
