--- a/src/components/layout/styles/NavBar.css
+++ b/src/components/layout/styles/NavBar.css
@@ -15,3 +15,14 @@
 .study-group-icon {
     width: 56px;
 }
+
+a.nav-link>svg {
+    color: var(--primary-color);
+}
+
+a.nav-link:active,
+a.nav-link:link,
+a.nav-link:visited,
+a.nav-link:focus {
+    background-color: var(--bg-color);
+}
