--- a/src/pages/styles/StudyGroupChat.css
+++ b/src/pages/styles/StudyGroupChat.css
@@ -103,7 +103,9 @@
     color: var(--primary-color);
 }
 
-/** StudyGroupChatAdmin  ***********/
+/*******************************************************/
+/** StudyGroupChatAdmin                                */
+/*******************************************************/
 .StudyGroupChatAdmin {
     margin-top: 6rem;
 }
