--- a/src/pages/styles/CourseInfo.css
+++ b/src/pages/styles/CourseInfo.css
@@ -81,7 +81,7 @@
 .CourseInfo__Body {
     flex: 1;
     overflow: scroll;
-    margin-top: 16vh;
+    margin-top: 17vh;
     margin-bottom: 7rem;
 }
 
@@ -103,10 +103,10 @@
 
 .Assignment.Assignment-Card {
     position: relative;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
-    padding-left: 1.5rem;
-    padding-right: 1.5rem;
+    padding-top: .75rem;
+    padding-bottom: 1rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     border-collapse: separate;
 }
 
@@ -118,8 +118,8 @@
 
 .Assignment .Assignment-Status {
     position: absolute;
-    left: .5rem;
-    top: 1.2rem;
+    left: 1rem;
+    top: 1.4rem;
     font-size: 9px;
 }
 
@@ -127,7 +127,7 @@
     color: var(--tertiary-color);
     position: absolute;
     right: .4rem;
-    bottom: .6rem;
+    bottom: 17%;
     font-size: 14px;
 }
 
