--- a/src/pages/styles/Courses.css
+++ b/src/pages/styles/Courses.css
@@ -30,8 +30,8 @@ table .Course.Course-Card .Course-Card-Term {
 
 .Course.Course-Card .Course-Name,
 .Course.Course-Card .Course-Title {
-    padding-top: .5rem;
-    padding-bottom: .5rem;
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
 }
 
 .Course.Course-Card .Course-Name {
