restyled assignments care

--- a/src/pages/styles/CourseInfo.css
+++ b/src/pages/styles/CourseInfo.css
@@ -99,6 +99,7 @@
 
 .Assignment.Assignment-Card .Assignment-Title {
     font-size: 14px;
+    font-weight: 400;
 }
 
 .Assignment.Assignment-Card {
