--- a/src/pages/styles/Tutors.css
+++ b/src/pages/styles/Tutors.css
@@ -96,15 +96,7 @@
 }
 
 /*************************************************/
-/** Be Tutor Form - Portfolio                    */
-/*************************************************/
-
-/* .BeTutor__Portfolio .BeTutor__Portfolio small.char-count {
-    float: right;
-} */
-
-/*************************************************/
-/** Be Tutor Form - Keywords                     */
+/** Be Tutor Form - Keywords & Portfolio         */
 /*************************************************/
 
 .BeTutorForm .User-Keywords,
